--- a/index.html
+++ b/index.html
@@ -4,12 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu de Navegação</title>
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+        }
+
+        .menu{
+            position:relative;
+            width: 100%;
+            height: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: aqua;
+        }
+
+        body{
+            position:absolute;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            background-color: #973232;
+        }
+    </style>
 </head>
 <body>
     <nav class="menu">
         <ul class="botoes">
-            <li><a href="#">home</a></li>li
-        
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Noticias</a></li>
+            <li><a hret="#">Produtos</a></li>
+            <li><a hret="#">Contatos</a></li>
 
         </ul>
     </nav>
