--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu de Navegação</title>
     <style>
+        .botoes{
+            list-style-type: none;
+            text-decoration: none;
+            color:black
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+
+        li{
+            padding: 1em;
+        }
+
+
         *{
             padding: 0;
             margin: 0;
@@ -13,7 +28,7 @@
         .menu{
             position:relative;
             width: 100%;
-            height: 20px;
+            height: 50px;
             display: flex;
             justify-content: center;
             align-items: center;
