--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: aqua;
+            background-color: rgb(145, 207, 86);
         }
 
         body{
@@ -42,7 +42,7 @@
             display: flex;
             justify-content: center;
             align-items: flex-start;
-            background-color: #973232;
+            background-color: #f0f0f0e5;
         }
     </style>
 </head>
