--- a/index.html
+++ b/index.html
@@ -14,9 +14,20 @@
             align-items: center;
         }
 
-
         li{
             padding: 1em;
+        }
+
+
+        li a{
+            text-decoration: none;
+            color:black
+        }
+
+        
+        li a:hover{
+            background-color: aqua;
+            color:blueviolet
         }
 
 
