--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             color:black
         }
 
-        
+
         li a:hover{
             background-color: aqua;
-            color:blueviolet
+            color:rgb(226, 43, 43)
         }
 
 
