--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         .botoes{
             list-style-type: none;
             text-decoration: none;
-            color:black
+            color:black;
             display: flex;
             justify-content: center;
             align-items: center;
